--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,31 @@ buildscript {
         core_ktx_version = "1.9.0"
         kotlin_version = "1.7.10"
         material_version = "1.7.0-alpha02"
-        nav_version = "2.5.2"
-    }
+        nav_version = '2.5.3'
+        room_version = '2.4.3'
 
+    }
+//    allprojects {
+//        repositories {
+//            google()
+//            mavenCentral()
+//            maven { url "https://jitpack.io" }
+//        }
+//    }
+    repositories {
+        mavenCentral()
+        google()
+    }
 dependencies {
     classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "com.android.tools.build:gradle:7.1.3"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 }
+
 }
+
+
+
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
